# IzerRaster

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL3BuildConfig.h  bindings.cpp  main.cpp  renderer2D.cpp  renderer2D.hpp
.github/actions/configure-cmake/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: cmake.yml
src/: .gitignore  IzerRaster.cp313-win_amd64.pyd  bindings.cpp  main.py  render.cu  render.h  renderer2D.cpp  renderer2D.hpp  texture.cpp  texture.hpp
